# verus-linalg

./: Cargo.toml  README.md  docs.md
.github/workflows/: check.yml
docs/: TODO.md  mat4-det-phases.md
scripts/: check.sh  profile-modules.sh
src/: lib.rs  mat2.rs  mat3.rs  mat4.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
src/mat2/: algebra.rs  ops.rs
src/mat3/: algebra.rs  ops.rs
src/mat4/: adjugate.rs  algebra.rs  det_advanced.rs  det_multiplicative.rs  det_transpose.rs  ops.rs
src/quat/: algebra.rs  assoc.rs  basis.rs  conjugate.rs  inverse.rs  norm.rs  ops.rs  rotation.rs
src/runtime/: mat2.rs  mat3.rs  mat4.rs  mod.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
src/vec2/: algebra.rs  ops.rs
src/vec3/: algebra.rs  ops.rs
src/vec4/: algebra.rs  ops.rs
